tests/error/modifier_errors/power_many_arg.err
Error: Too many arguments (at $FILE:7:18)
  | 
5 | @guppy
6 | def test() -> None:
7 |     with power(1, 2, 3):
  |                   ^^^^ Unexpected arguments (expected 1, got 3)

Guppy compilation failed due to 1 previous error
